--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!---->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Moon</title>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,37 +18,56 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Patua+One&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
     <header id="container-header">
         <h1>The Moon</h1>
-        <div><!--barra de pesquisa--> </div>
-        <a href="#">
-            <span class="material-symbols-outlined">
-                shopping_cart
-            </span>
-        </a>
-        <a class="botao-login" href="#">Login</a>
+        <div id="container-pesquisa">
+            <input id="barra-pesquisa" type="text" placeholder="Buscar...">
+            <div class="lupa-pesquisa">
+                <span class="material-symbols-outlined">
+                    search
+                </span>
+            </div>
+        </div>
+        <div class="container-logcar">
+            <a id="carrinho-icon" href="#">
+                <span class="material-symbols-outlined">
+                    shopping_cart
+                </span>
+            </a>
+            <a class="botao-login" href="#">Login</a>
+        </div>
 
     </header>
     <div>
         <ul class="container-menu-lateral">
-            <li>
-                Camisetas
-            </li>
+            <div class="menu-lateral-items">
+                <li>
+                    CAMISETAS
+                </li>
+            </div>
 
-            <li>
-                Calças
-            </li>
+            <div class="menu-lateral-items">
+                <li>
+                    CALÇAS
+                </li>
+            </div>
 
-            <li>
-                Agasalhos
-            </li>
+            <div class="menu-lateral-items">
+                <li>
+                    AGASALHOS
+                </li>
+            </div>
 
-            <li>
-                Acessórios
-            </li>
+            <div class="menu-lateral-items">
+                <li>
+                    ACESSÓRIOS
+                </li>
+            </div>
         </ul>
     </div>
     <article class="container-article">
@@ -55,7 +75,7 @@
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="camisas/Camiseta1.jfif" alt="">
 
-                    <p>Camisa Other Masculina The Other Moon</p>
+                    <p id="filtro-produto">Camisa Other Masculina The Other Moon</p>
 
                     <h2 class="valor-produto">R$129,99</h2>
 
@@ -65,7 +85,7 @@
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -76,15 +96,15 @@
 
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="camisas/Camiseta2.jfif" alt="">
-                    <p>Camisa Masculina Ja Other Model The Moon</p>
+                    <p id="filtro-produto">Camisa Masculina Ja Other Model The Moon</p>
                     <h2 class="valor-produto">R$117,90</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -93,15 +113,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="camisas/Camiseta 3.jfif" alt="">
-                    <p>Camisa Masculina Empire Other The Moon</p>
+                    <p id="filtro-produto">Camisa Masculina Empire Other The Moon</p>
                     <h2 class="valor-produto">R$129,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -110,15 +130,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="camisas/Camiseta4.jfif" alt="">
-                    <p>Camisa Masculina Insider Other The Moon</p>
+                    <p id="filtro-produto">Camisa Masculina Insider Other The Moon</p>
                     <h2 class="valor-produto">R$98,60</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -127,15 +147,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="agasalhos/agasalho1.jfif" alt="">
-                    <p>Agasalho Superfire Other Next Model</p>
+                    <p id="filtro-produto">Agasalho Superfire Other Next Model</p>
                     <h2 class="valor-produto">R$230,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -144,15 +164,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="agasalhos/agasalho2.jfif" alt="">
-                    <p>Agasalho Other Superfire thunder Next Model</p>
+                    <p id="filtro-produto">Agasalho Other Superfire thunder Next Model</p>
                     <h2 class="valor-produto">R$199,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -161,15 +181,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="agasalhos/agasalho3.jfif" alt="">
-                    <p>Agasalho Other safira Next Model</p>
+                    <p id="filtro-produto">Agasalho Other safira Next Model</p>
                     <h2 class="valor-produto">R$230,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -178,15 +198,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="agasalhos/agasalho4.jfif" alt="">
-                    <p>Agasalho Looper Other Jango Model</p>
+                    <p id="filtro-produto">Agasalho Looper Other Jango Model</p>
                     <h2 class="valor-produto">R$209,90</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -195,15 +215,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="calcas/calca1.jfif" alt="">
-                    <p>Calca Emperium Next Model Other On</p>
+                    <p id="filtro-produto">Calca Emperium Next Model Other On</p>
                     <h2 class="valor-produto">R$99,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -212,15 +232,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="calcas/calca2.jfif" alt="">
-                    <p>Calca Emperium Darkness Model On Other</p>
+                    <p id="filtro-produto">Calca Emperium Darkness Model On Other</p>
                     <h2 class="valor-produto">R$110,00</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -229,15 +249,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="calcas/calca3.jfif" alt="">
-                    <p>Calca Tormentum On ModelOther </p>
+                    <p id="filtro-produto">Calca Tormentum On ModelOther </p>
                     <h2 class="valor-produto">R$125,98</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -246,15 +266,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="calcas/calca4.jfif" alt="">
-                    <p>Calca Menja Soft Model OnOther</p>
+                    <p id="filtro-produto">Calca Menja Soft Model OnOther</p>
                     <h2 class="valor-produto">R$100,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -263,15 +283,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="acessorios/acessorio1.jfif" alt="">
-                    <p>Boné The Moon On the waveOther</p>
+                    <p id="filtro-produto">Boné The Moon On the waveOther</p>
                     <h2 class="valor-produto">R$75,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -280,15 +300,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="acessorios/acessorio2.jfif" alt="">
-                    <p>Boné The Moon SoleniunOther </p>
+                    <p id="filtro-produto">Boné The Moon SoleniunOther </p>
                     <h2 class="valor-produto">R$69,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -297,15 +317,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="acessorios/acessorio3.jfif" alt="">
-                    <p>Boné Gargula The Moon Other</p>
+                    <p id="filtro-produto">Boné Gargula The Moon Other</p>
                     <h2 class="valor-produto">R$72,90</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -314,15 +334,15 @@
             </li>
             <li>
                 <div class="container-produto"><img class="imagem-do-produto" src="acessorios/acessorio4.jfif" alt="">
-                    <p>Boné The Moon Floor On the wave</p>
+                    <p id="filtro-produto">Boné The Moon Floor On the wave</p>
                     <h2 class="valor-produto">R$64,99</h2>
-                     <a href="#">
+                    <a href="#">
                         <h2 class="botao-comprar-produto">COMPRAR</h2>
                     </a>
 
                     <a href="#">
                         <h2 class="botao-add-carrinho"><span class="material-symbols-outlined">
-                                    shopping_cart</span>
+                                shopping_cart</span>
                         </h2>
                     </a>
 
@@ -332,6 +352,7 @@
 
         </ul>
     </article>
+    
 </body>
 
 </html>
