--- a/index.html
+++ b/index.html
@@ -47,28 +47,62 @@
         <ul class="container-menu-lateral">
             <div class="menu-lateral-items">
                 <li>
-                    CAMISETAS
+                    <span class="material-symbols-outlined">
+                        expand_more
+                    </span>
+                    Camisetas
                 </li>
             </div>
 
             <div class="menu-lateral-items">
                 <li>
-                    CALÇAS
+                    <span class="material-symbols-outlined">
+                        expand_more
+                    </span>
+                    Calças
                 </li>
             </div>
 
             <div class="menu-lateral-items">
                 <li>
-                    AGASALHOS
+                    <span class="material-symbols-outlined">
+                        expand_more
+                    </span>
+                    Agasalhos
                 </li>
             </div>
 
             <div class="menu-lateral-items">
                 <li>
-                    ACESSÓRIOS
+                    <span class="material-symbols-outlined">
+                        expand_more
+                    </span>
+                    Acessórios
                 </li>
             </div>
+            <h1>Tamanhos:</h1>
+
+            <li class="tamanho-roupas">
+                <p><input type="checkbox"> P</p>
+            </li>
+            <li class="tamanho-roupas">
+                <p><input type="checkbox"> PP</p>
+            </li>
+            <li class="tamanho-roupas">
+                <p><input type="checkbox"> M</p>
+            </li>
+            <li class="tamanho-roupas">
+                <p><input type="checkbox"> G</p>
+            </li>
+            <li class="tamanho-roupas">
+                <p><input type="checkbox"> XG</p>
+            </li>
+            <li class="tamanho-roupas">
+                <p><input type="checkbox"> GG</p>
+            </li>
         </ul>
+
+
     </div>
     <article class="container-article">
         <ul class="container-ul">
@@ -352,7 +386,7 @@
 
         </ul>
     </article>
-    
+
 </body>
 
 </html>
